@@ -1,6 +1,6 @@
 # msstorelib
 
-![Kotlin](https://img.shields.io/badge/kotlin-2.3.20-blue.svg?logo=kotlin)
+![Kotlin](https://img.shields.io/badge/kotlin-2.4.10-blue.svg?logo=kotlin)
 ![Java 25+](https://img.shields.io/badge/Java-25%2B-gray.svg?style=flat)
 [![GitHub Sponsors](https://img.shields.io/badge/Sponsor-gray?&logo=GitHub-Sponsors&logoColor=EA4AAA)](https://github.com/sponsors/StefanOltmann)
 
@@ -23,7 +23,7 @@ repositories {
 }
 
 dependencies {
-    implementation("de.stefan-oltmann:msstorelib:0.5.2")
+    implementation("de.stefan-oltmann:msstorelib:0.6.0")
 }
 ```
 
@@ -56,6 +56,11 @@ fun main() {
 }
 ```
 
+`getLicenseInfo()` blocks the calling thread until the Store answers; the
+native layer aborts the query after 30 seconds when the Store service does
+not respond, so the call never hangs forever. Call it from a background
+thread to keep the UI responsive.
+
 ### In-app purchase
 
 ```kotlin
@@ -77,8 +82,15 @@ when (status) {
 }
 ```
 
-The native layer assigns the current foreground window as the owner HWND for
-Store modal UI. Ensure your app has a focused window when requesting purchases.
+The native layer picks the owner window for the Store modal dialog automatically: a visible window
+on the calling thread, the foreground window of this process, or any visible window of this process.
+The call blocks until the dialog closes; keep the app's UI thread responsive while it is open (do
+not call from a background thread while the UI thread waits for the result). If no window is
+available, the call fails with a clear error.
+
+The purchase call must run on a thread with a single-threaded COM apartment (STA). If other JVM or
+native code already initialized the calling thread as multi-threaded (MTA), the call fails with a
+clear error instead of an unexplained WinRT failure.
 
 ## API model types
 
@@ -86,23 +98,33 @@ Store modal UI. Ensure your app has a focused window when requesting purchases.
 - `MsStoreAddOnLicenseInfo` (add-on license entries)
 - `MsStorePurchaseStatus` (purchase result status)
 
-Note: `isTrialOwnedByThisUser`, `trialUniqueId`, and `trialTimeRemaining` are
-intentionally not exposed in the API model to avoid false expectations because
-they are not used by the MS Store API.
+Note: `isTrialOwnedByThisUser`, `trialUniqueId`, and `trialTimeRemaining` are intentionally not
+exposed in the API model to avoid false expectations because they are not used by the MS Store API.
 
 ## Error handling
 
-- `MsStoreLicenseException` is thrown when the native call fails.
-- The native layer stores the last error string, exposed in Kotlin via `MsStoreNative.getLastError()`.
+- `MsStoreLicenseException` is the only exception type thrown by the public API. Underlying errors,
+  including native failures and JVM errors, are always preserved as the exception's `cause`, so no
+  error information is lost.
+- Native error text is included in the exception message, so integrators do not need access to
+  internal native state to diagnose failures.
 
 ## Requirements
 
 - Windows 10/11
 - App packaged with MSIX and a Microsoft Store identity
 - Product associated in Partner Center
-- Java 25 or higher
+- Java 25 or higher, launched with `--enable-native-access=ALL-UNNAMED` (see below)
 
 If these requirements are not met, Store APIs can return empty results or errors.
+
+## Native access (JEP 472)
+
+The library loads and calls the native DLL through restricted JVM APIs (FFM, JEP 454). Since JDK 24
+these calls require an explicit opt-in (JEP 472): launch your app with
+`--enable-native-access=ALL-UNNAMED`, or `--enable-native-access=msstorelib` when the library is on
+the module path. Without the flag the JVM prints a warning today and blocks the calls on a future
+JDK; msstorelib then fails with an error that includes this launch option.
 
 ## Native DLL loading
 
@@ -114,11 +136,15 @@ Resolution order:
 4. Extract embedded resource `windows-x86_64/msstore_winrt.dll` to versioned cache and load it
 
 Extraction is only attempted when steps 1-3 fail.
-Cache path format:
+
+A DLL found in steps 2-3 that cannot be loaded (for example a corrupt or
+wrong-architecture file) is skipped and resolution continues with the remaining
+steps. The explicit override in step 1 always fails fast, because it is a
+deliberate choice. Cache path format:
 `<java.io.tmpdir>/msstorelib-native/<LIB_VERSION>/windows-x86_64/msstore_winrt.dll`
 
-`LIB_VERSION` is generated at build time (from project version / git-versioning).
-This means extraction runs once per library version, not on every start.
+`LIB_VERSION` is generated at build time (from project version / git-versioning). This means
+extraction runs once per library version, not on every start.
 
 Override path example:
 
@@ -141,6 +167,9 @@ Visual Studio 2022 Build Tools (C++ workload):
 ```powershell
 winget install --id Microsoft.VisualStudio.2022.BuildTools -e --accept-source-agreements --accept-package-agreements --override "--quiet --wait --norestart --add Microsoft.VisualStudio.Workload.VCTools --includeRecommended"
 ```
+
+Visual Studio 2026 Build Tools also work; the build detects the installed VS
+version and selects the matching CMake generator automatically.
 
 If `winget` is unavailable, use manual installers:
 
